--- a/slidedit.ipynb
+++ b/slidedit.ipynb
@@ -9,7 +9,9 @@
     "\n",
     "This notebook is a demo showing how to use an **instructed LLM** to automatically rearrange the format of texts & images in `.pptx` slides. \n",
     "\n",
-    "The pipeline demonstrates multimodal understanding: the model receives slides with __Misaligned & Random-Layout__ content and outputs layout corrections. The corrections contains two stages in this demo: __Rematch & Relayout__.\n"
+    "This pipeline demonstrates multimodal understanding: the model receives slides with __Misaligned & Random-Layout__ content and outputs layout corrections. The corrections contains two stages in this demo: __Rematch & Relayout__.\n",
+    "\n",
+    "This pipeline is designed by human, and GPT5 is used to assist python programming here.\n"
    ]
   },
   {
