--- a/slidedit.ipynb
+++ b/slidedit.ipynb
@@ -238,7 +238,7 @@
     "def call_llm_for_rematch(images_info: List[Dict[str,Any]], captions_info: List[Dict[str,Any]]) -> Dict[str, Any]:\n",
     "    user_content = build_rematch_messages(images_info, captions_info)\n",
     "    result = None\n",
-    "    save_path = \"rematch_result.json\"\n",
+    "    save_path = \"logs/rematch_result.json\"\n",
     "\n",
     "    # Try structured JSON response first\n",
     "    try:\n",
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "2956bdff",
    "metadata": {},
    "outputs": [],
@@ -817,7 +817,7 @@
      "output_type": "stream",
      "text": [
       "Slides in prompt: 20 | images: 20 | captions: 20\n",
-      "[OK] Rematch result saved to rematch_result.json\n",
+      "[OK] Rematch result saved to logs/rematch_result.json\n",
       "Rematch map (truncated):\n",
       "{\n",
       "  \"pairs\": [\n",
@@ -834,7 +834,7 @@
       "    {\n",
       "      \"slide\": 2,\n",
       "      \"image\": \"s2_sh0\",\n",
-      "      \"caption\": \"s16_sh1\"\n",
+      "      \"caption\": \"s0_sh1\"\n",
       "    },\n",
       "    {\n",
       "      \"slide\": 3,\n",
@@ -879,16 +879,16 @@
       "    {\n",
       "      \"slide\": 11,\n",
       "      \"image\": \"s11_sh0\",\n",
-      "      \"caption\": \"s0_sh1 ...\n",
-      "Rematched deck saved: coco_rematched.pptx\n"
+      "      \"caption\": \"s16_sh1 ...\n",
+      "Rematched deck saved: slides/coco_rematched.pptx\n"
      ]
     }
    ],
    "source": [
     "# Paths to .pptx files\n",
-    "INPUT_PPTX      = \"coco_raw_20.pptx\"   # your mismatched, dirty deck\n",
-    "REMATCHED_PPTX  = \"coco_rematched.pptx\"\n",
-    "OUTPUT_PPTX     = \"coco_relayout_out.pptx\"\n",
+    "INPUT_PPTX      = \"slides/coco_raw.pptx\"   # your mismatched, dirty deck\n",
+    "REMATCHED_PPTX  = \"slides/coco_rematched.pptx\"\n",
+    "OUTPUT_PPTX     = \"slides/coco_relayout.pptx\"\n",
     "\n",
     "MAX_SLIDES = 20  # keep prompts reasonable for vision + planning\n",
     "\n",
@@ -937,10 +937,10 @@
       "        \"s0_sh0\"\n",
       "      ],\n",
       "      \"bbox\": {\n",
-      "        \"x\": 0.01875,\n",
-      "        \"y\": 0.0333,\n",
-      "        \"w\": 0.58,\n",
-      "        \"h\": 0.9334\n",
+      "        \"x\": 0.02,\n",
+      "        \"y\": 0.033,\n",
+      "        \"w\": 0.56,\n",
+      "        \"h\": 0.934\n",
       "      }\n",
       "    },\n",
       "    {\n",
@@ -949,10 +949,10 @@
       "        \"s0_sh1\"\n",
       "      ],\n",
       "      \"bbox\": {\n",
-      "        \"x\": 0.61875,\n",
-      "        \"y\": 0.0333,\n",
-      "        \"w\": 0.3625,\n",
-      "        \"h\": 0.9334\n",
+      "        \"x\": 0.6,\n",
+      "        \"y\": 0.033,\n",
+      "        \"w\": 0.38,\n",
+      "        \"h\": 0.934\n",
       "      }\n",
       "    },\n",
       "    {\n",
@@ -967,19 +967,20 @@
       "        \"s1_sh0\"\n",
       "      ],\n",
       "      \"bbox\": {\n",
-      "        \"x\": 0.01875,\n",
-      "        \"y\": 0.0333,\n",
-      "        \"w\": 0.58,\n",
-      "        \"h\": 0.9334\n",
+      "        \"x\": 0.02,\n",
+      "        \"y\": 0.033,\n",
+      "        \"w\": 0.56,\n",
+      "        \"h\": 0.934\n",
       "      }\n",
       "    },\n",
       "    {\n",
       "      \"op\": \"move_resize\",\n",
       "      \"targets\": [\n",
       "        \"s1_sh1\"\n",
-      "    ...\n",
+      "      ],\n",
+      "      \"bbox\" ...\n",
       "Layout plan saved to layout_plan.json\n",
-      "Final fixed deck saved: coco_relayout_out.pptx\n"
+      "Final fixed deck saved: slides/coco_relayout.pptx\n"
      ]
     }
    ],
@@ -994,7 +995,7 @@
     "layout_plan = call_llm_for_plan(instruction, slides_json_after)\n",
     "print(\"Layout plan (truncated):\")\n",
     "print(json.dumps(layout_plan, indent=2, ensure_ascii=False)[:1000], \"...\")\n",
-    "with open(\"layout_plan.json\", \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(\"logs/layout_plan.json\", \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump(layout_plan, f, indent=2, ensure_ascii=False)\n",
     "print(\"Layout plan saved to layout_plan.json\")\n",
     "\n",
